lenguajeutbParser.py
# Generated from C:/Users/juanp/PycharmProjects/lenguajeUTB\lenguajeutb.g4 by ANTLR 4.7
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys


class lenguajeutbParser ( Parser ):

    grammarFileName = "lenguajeutb.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'sino'", "'entonces'", "'mostrar_en_pantalla'", 
                     "','", "'inicio_para'", "'fin_para'", "'inicio_mientras'", 
                     "'fin_mientras'", "'si'", "'fin_si'", "'por'", "'cambiar_valor_de'", 
                     "'Nombre_del_ejercicio'", "<INVALID>", "'variables'", 
                     "'fin_variables'", "'Flujo'", "'fin_flujo'", "'valor'", 
                     "'de'", "'agregar'", "'<-'", "'cambiar'", "'en_la_posicion'", 
                     "'en_la_coordenada'", "<INVALID>", "'convertir'", "'a'", 
                     "'leer'", "'tipo'", "'lista_de_entero'", "'lista_de_real'", 
                     "'lista_de_booleano'", "'lista_de_texto'", "'matriz_de_entero'", 
                     "'matriz_de_real'", "'matriz_de_booleano'", "'matriz_de_texto'", 
                     "'entero'", "'real'", "'booleano'", "'texto'", "'nombre'", 
                     "'valor_inicial'", "'tamano'", "'x'", "'('", "')'", 
                     "'+'", "'-'", "'*'", "'/'", "'%'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'<>'" ]

    symbolicNames = [ "<INVALID>", "SINO", "ENTONCES", "MOSTRAR_EN_PANTALLA", 
                      "COMA", "INICIO_PARA", "FIN_PARA", "INICIO_MIENTRAS", 
                      "FIN_MIENTRAS", "INICIO_SI", "FIN_SI", "POR", "CAMBIAR_VALOR_DE", 
                      "NOMBRE_EJERCICIO", "NOTA", "VARIABLES", "FIN_VARIABLES", 
                      "FLUJO", "FIN_FLUJO", "VALOR", "DE", "AGREGAR", "OP_POSC", 
                      "CAMBIAR", "EN_POSICION", "EN_COORDENADA", "COORDENADA", 
                      "CONVERTIR", "A", "LEER", "TIPO", "TIPO_LISTA_DE_ENTERO", 
                      "TIPO_LISTA_DE_REAL", "TIPO_LISTA_DE_BOOLEANO", "TIPO_LISTA_DE_TEXTO", 
                      "TIPO_MATRIZ_DE_ENTERO", "TIPO_MATRIZ_DE_REAL", "TIPO_MATRIZ_DE_BOOLEANO", 
                      "TIPO_MATRIZ_DE_TEXTO", "TIPO_ENTERO", "TIPO_REAL", 
                      "TIPO_BOOLEANO", "TIPO_TEXTO", "NOMBRE", "VALOR_INICIAL", 
                      "TAMANO", "EQUIS", "PAR_IZQ", "PAR_DER", "SUMA", "RESTA", 
                      "MULTIPLICACION", "DIVISION", "MODULO", "ENTERO", 
                      "REAL", "CHAR", "BOOL", "STRING", "COMILLAS_DOBLES", 
                      "TEXTO", "IDENTIFICADOR", "NOMBRE_PRG", "WS" ]

    RULE_start_rule = 0
    RULE_nombre_programa = 1
    RULE_variables = 2
    RULE_declaracion = 3
    RULE_flujo = 4
    RULE_sentencias = 5
    RULE_asignacion = 6
    RULE_ciclo_para = 7
    RULE_ciclo_mientras = 8
    RULE_si = 9
    RULE_expresion = 10
    RULE_div = 11
    RULE_atom = 12
    RULE_conversion = 13
    RULE_acceso_lista = 14
    RULE_acceso_matriz = 15
    RULE_imprimir = 16

    ruleNames =  [ "start_rule", "nombre_programa", "variables", "declaracion", 
                   "flujo", "sentencias", "asignacion", "ciclo_para", "ciclo_mientras", 
                   "si", "expresion", "div", "atom", "conversion", "acceso_lista", 
                   "acceso_matriz", "imprimir" ]

    EOF = Token.EOF
    SINO=1
    ENTONCES=2
    MOSTRAR_EN_PANTALLA=3
    COMA=4
    INICIO_PARA=5
    FIN_PARA=6
    INICIO_MIENTRAS=7
    FIN_MIENTRAS=8
    INICIO_SI=9
    FIN_SI=10
    POR=11
    CAMBIAR_VALOR_DE=12
    NOMBRE_EJERCICIO=13
    NOTA=14
    VARIABLES=15
    FIN_VARIABLES=16
    FLUJO=17
    FIN_FLUJO=18
    VALOR=19
    DE=20
    AGREGAR=21
    OP_POSC=22
    CAMBIAR=23
    EN_POSICION=24
    EN_COORDENADA=25
    COORDENADA=26
    CONVERTIR=27
    A=28
    LEER=29
    TIPO=30
    TIPO_LISTA_DE_ENTERO=31
    TIPO_LISTA_DE_REAL=32
    TIPO_LISTA_DE_BOOLEANO=33
    TIPO_LISTA_DE_TEXTO=34
    TIPO_MATRIZ_DE_ENTERO=35
    TIPO_MATRIZ_DE_REAL=36
    TIPO_MATRIZ_DE_BOOLEANO=37
    TIPO_MATRIZ_DE_TEXTO=38
    TIPO_ENTERO=39
    TIPO_REAL=40
    TIPO_BOOLEANO=41
    TIPO_TEXTO=42
    NOMBRE=43
    VALOR_INICIAL=44
    TAMANO=45
    EQUIS=46
    PAR_IZQ=47
    PAR_DER=48
    SUMA=49
    RESTA=50
    MULTIPLICACION=51
    DIVISION=52
    MODULO=53
    ENTERO=54
    REAL=55
    CHAR=56
    BOOL=57
    STRING=58
    COMILLAS_DOBLES=59
    TEXTO=60
    IDENTIFICADOR=61
    NOMBRE_PRG=62
    WS=63

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class Start_ruleContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def nombre_programa(self):
            return self.getTypedRuleContext(lenguajeutbParser.Nombre_programaContext,0)


        def variables(self):
            return self.getTypedRuleContext(lenguajeutbParser.VariablesContext,0)


        def flujo(self):
            return self.getTypedRuleContext(lenguajeutbParser.FlujoContext,0)


        def getRuleIndex(self):
            return lenguajeutbParser.RULE_start_rule

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStart_rule" ):
                return visitor.visitStart_rule(self)
            else:
                return visitor.visitChildren(self)




    def start_rule(self):

        localctx = lenguajeutbParser.Start_ruleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start_rule)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 34
            self.nombre_programa()
            self.state = 35
            self.variables()
            self.state = 36
            self.flujo()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Nombre_programaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NOMBRE_EJERCICIO(self):
            return self.getToken(lenguajeutbParser.NOMBRE_EJERCICIO, 0)

        def NOMBRE_PRG(self):
            return self.getToken(lenguajeutbParser.NOMBRE_PRG, 0)

        def getRuleIndex(self):
            return lenguajeutbParser.RULE_nombre_programa

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNombre_programa" ):
                return visitor.visitNombre_programa(self)
            else:
                return visitor.visitChildren(self)




    def nombre_programa(self):

        localctx = lenguajeutbParser.Nombre_programaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_nombre_programa)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 38
            self.match(lenguajeutbParser.NOMBRE_EJERCICIO)
            self.state = 39
            self.match(lenguajeutbParser.NOMBRE_PRG)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VariablesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARIABLES(self):
            return self.getToken(lenguajeutbParser.VARIABLES, 0)

        def FIN_VARIABLES(self):
            return self.getToken(lenguajeutbParser.FIN_VARIABLES, 0)

        def declaracion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lenguajeutbParser.DeclaracionContext)
            else:
                return self.getTypedRuleContext(lenguajeutbParser.DeclaracionContext,i)


        def getRuleIndex(self):
            return lenguajeutbParser.RULE_variables

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariables" ):
                return visitor.visitVariables(self)
            else:
                return visitor.visitChildren(self)




    def variables(self):

        localctx = lenguajeutbParser.VariablesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_variables)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self.match(lenguajeutbParser.VARIABLES)
            self.state = 43 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 42
                self.declaracion()
                self.state = 45 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==lenguajeutbParser.TIPO):
                    break

            self.state = 47
            self.match(lenguajeutbParser.FIN_VARIABLES)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclaracionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.entero = None # Token
            self.v_entero = None # ExpresionContext
            self.real = None # Token
            self.v_real = None # ExpresionContext
            self.texto = None # Token
            self.v_texto = None # Token
            self.booleano = None # Token
            self.v_booleano = None # ExpresionContext
            self.lista_entero = None # Token
            self.lista_texto = None # Token
            self.lista_real = None # Token
            self.lista_booleano = None # Token
            self.matriz_booleano = None # Token
            self.matriz_texto = None # Token
            self.matriz_entero = None # Token
            self.matriz_real = None # Token

        def TIPO(self):
            return self.getToken(lenguajeutbParser.TIPO, 0)

        def TIPO_ENTERO(self):
            return self.getToken(lenguajeutbParser.TIPO_ENTERO, 0)

        def NOMBRE(self):
            return self.getToken(lenguajeutbParser.NOMBRE, 0)

        def VALOR_INICIAL(self):
            return self.getToken(lenguajeutbParser.VALOR_INICIAL, 0)

        def TIPO_REAL(self):
            return self.getToken(lenguajeutbParser.TIPO_REAL, 0)

        def TIPO_TEXTO(self):
            return self.getToken(lenguajeutbParser.TIPO_TEXTO, 0)

        def TIPO_BOOLEANO(self):
            return self.getToken(lenguajeutbParser.TIPO_BOOLEANO, 0)

        def TIPO_LISTA_DE_ENTERO(self):
            return self.getToken(lenguajeutbParser.TIPO_LISTA_DE_ENTERO, 0)

        def TIPO_LISTA_DE_TEXTO(self):
            return self.getToken(lenguajeutbParser.TIPO_LISTA_DE_TEXTO, 0)

        def TIPO_LISTA_DE_REAL(self):
            return self.getToken(lenguajeutbParser.TIPO_LISTA_DE_REAL, 0)

        def TIPO_LISTA_DE_BOOLEANO(self):
            return self.getToken(lenguajeutbParser.TIPO_LISTA_DE_BOOLEANO, 0)

        def TIPO_MATRIZ_DE_BOOLEANO(self):
            return self.getToken(lenguajeutbParser.TIPO_MATRIZ_DE_BOOLEANO, 0)

        def TIPO_MATRIZ_DE_TEXTO(self):
            return self.getToken(lenguajeutbParser.TIPO_MATRIZ_DE_TEXTO, 0)

        def TIPO_MATRIZ_DE_ENTERO(self):
            return self.getToken(lenguajeutbParser.TIPO_MATRIZ_DE_ENTERO, 0)

        def TIPO_MATRIZ_DE_REAL(self):
            return self.getToken(lenguajeutbParser.TIPO_MATRIZ_DE_REAL, 0)

        def IDENTIFICADOR(self):
            return self.getToken(lenguajeutbParser.IDENTIFICADOR, 0)

        def expresion(self):
            return self.getTypedRuleContext(lenguajeutbParser.ExpresionContext,0)


        def TEXTO(self):
            return self.getToken(lenguajeutbParser.TEXTO, 0)

        def getRuleIndex(self):
            return lenguajeutbParser.RULE_declaracion

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracion" ):
                return visitor.visitDeclaracion(self)
            else:
                return visitor.visitChildren(self)




    def declaracion(self):

        localctx = lenguajeutbParser.DeclaracionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_declaracion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self.match(lenguajeutbParser.TIPO)
            self.state = 94
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [lenguajeutbParser.TIPO_ENTERO]:
                self.state = 50
                self.match(lenguajeutbParser.TIPO_ENTERO)
                self.state = 51
                self.match(lenguajeutbParser.NOMBRE)
                self.state = 52
                localctx.entero = self.match(lenguajeutbParser.IDENTIFICADOR)
                self.state = 53
                self.match(lenguajeutbParser.VALOR_INICIAL)
                self.state = 54
                localctx.v_entero = self.expresion()
                pass
            elif token in [lenguajeutbParser.TIPO_REAL]:
                self.state = 55
                self.match(lenguajeutbParser.TIPO_REAL)
                self.state = 56
                self.match(lenguajeutbParser.NOMBRE)
                self.state = 57
                localctx.real = self.match(lenguajeutbParser.IDENTIFICADOR)
                self.state = 58
                self.match(lenguajeutbParser.VALOR_INICIAL)
                self.state = 59
                localctx.v_real = self.expresion()
                pass
            elif token in [lenguajeutbParser.TIPO_TEXTO]:
                self.state = 60
                self.match(lenguajeutbParser.TIPO_TEXTO)
                self.state = 61
                self.match(lenguajeutbParser.NOMBRE)
                self.state = 62
                localctx.texto = self.match(lenguajeutbParser.IDENTIFICADOR)
                self.state = 63
                self.match(lenguajeutbParser.VALOR_INICIAL)
                self.state = 64
                localctx.v_texto = self.match(lenguajeutbParser.TEXTO)
                pass
            elif token in [lenguajeutbParser.TIPO_BOOLEANO]:
                self.state = 65
                self.match(lenguajeutbParser.TIPO_BOOLEANO)
                self.state = 66
                self.match(lenguajeutbParser.NOMBRE)
                self.state = 67
                localctx.booleano = self.match(lenguajeutbParser.IDENTIFICADOR)
                self.state = 68
                self.match(lenguajeutbParser.VALOR_INICIAL)
                self.state = 69
                localctx.v_booleano = self.expresion()
                pass
            elif token in [lenguajeutbParser.TIPO_LISTA_DE_ENTERO]:
                self.state = 70
                self.match(lenguajeutbParser.TIPO_LISTA_DE_ENTERO)
                self.state = 71
                self.match(lenguajeutbParser.NOMBRE)
                self.state = 72
                localctx.lista_entero = self.match(lenguajeutbParser.IDENTIFICADOR)
                pass
            elif token in [lenguajeutbParser.TIPO_LISTA_DE_TEXTO]:
                self.state = 73
                self.match(lenguajeutbParser.TIPO_LISTA_DE_TEXTO)
                self.state = 74
                self.match(lenguajeutbParser.NOMBRE)
                self.state = 75
                localctx.lista_texto = self.match(lenguajeutbParser.IDENTIFICADOR)
                pass
            elif token in [lenguajeutbParser.TIPO_LISTA_DE_REAL]:
                self.state = 76
                self.match(lenguajeutbParser.TIPO_LISTA_DE_REAL)
                self.state = 77
                self.match(lenguajeutbParser.NOMBRE)
                self.state = 78
                localctx.lista_real = self.match(lenguajeutbParser.IDENTIFICADOR)
                pass
            elif token in [lenguajeutbParser.TIPO_LISTA_DE_BOOLEANO]:
                self.state = 79
                self.match(lenguajeutbParser.TIPO_LISTA_DE_BOOLEANO)
                self.state = 80
                self.match(lenguajeutbParser.NOMBRE)
                self.state = 81
                localctx.lista_booleano = self.match(lenguajeutbParser.IDENTIFICADOR)
                pass
            elif token in [lenguajeutbParser.TIPO_MATRIZ_DE_BOOLEANO]:
                self.state = 82
                self.match(lenguajeutbParser.TIPO_MATRIZ_DE_BOOLEANO)
                self.state = 83
                self.match(lenguajeutbParser.NOMBRE)
                self.state = 84
                localctx.matriz_booleano = self.match(lenguajeutbParser.IDENTIFICADOR)
                pass
            elif token in [lenguajeutbParser.TIPO_MATRIZ_DE_TEXTO]:
                self.state = 85
                self.match(lenguajeutbParser.TIPO_MATRIZ_DE_TEXTO)
                self.state = 86
                self.match(lenguajeutbParser.NOMBRE)
                self.state = 87
                localctx.matriz_texto = self.match(lenguajeutbParser.IDENTIFICADOR)
                pass
            elif token in [lenguajeutbParser.TIPO_MATRIZ_DE_ENTERO]:
                self.state = 88
                self.match(lenguajeutbParser.TIPO_MATRIZ_DE_ENTERO)
                self.state = 89
                self.match(lenguajeutbParser.NOMBRE)
                self.state = 90
                localctx.matriz_entero = self.match(lenguajeutbParser.IDENTIFICADOR)
                pass
            elif token in [lenguajeutbParser.TIPO_MATRIZ_DE_REAL]:
                self.state = 91
                self.match(lenguajeutbParser.TIPO_MATRIZ_DE_REAL)
                self.state = 92
                self.match(lenguajeutbParser.NOMBRE)
                self.state = 93
                localctx.matriz_real = self.match(lenguajeutbParser.IDENTIFICADOR)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FlujoContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FLUJO(self):
            return self.getToken(lenguajeutbParser.FLUJO, 0)

        def FIN_FLUJO(self):
            return self.getToken(lenguajeutbParser.FIN_FLUJO, 0)

        def sentencias(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lenguajeutbParser.SentenciasContext)
            else:
                return self.getTypedRuleContext(lenguajeutbParser.SentenciasContext,i)


        def getRuleIndex(self):
            return lenguajeutbParser.RULE_flujo

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFlujo" ):
                return visitor.visitFlujo(self)
            else:
                return visitor.visitChildren(self)




    def flujo(self):

        localctx = lenguajeutbParser.FlujoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_flujo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.match(lenguajeutbParser.FLUJO)
            self.state = 98 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 97
                self.sentencias()
                self.state = 100 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << lenguajeutbParser.MOSTRAR_EN_PANTALLA) | (1 << lenguajeutbParser.INICIO_PARA) | (1 << lenguajeutbParser.INICIO_MIENTRAS) | (1 << lenguajeutbParser.INICIO_SI) | (1 << lenguajeutbParser.CAMBIAR_VALOR_DE))) != 0)):
                    break

            self.state = 102
            self.match(lenguajeutbParser.FIN_FLUJO)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SentenciasContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def asignacion(self):
            return self.getTypedRuleContext(lenguajeutbParser.AsignacionContext,0)


        def ciclo_para(self):
            return self.getTypedRuleContext(lenguajeutbParser.Ciclo_paraContext,0)


        def ciclo_mientras(self):
            return self.getTypedRuleContext(lenguajeutbParser.Ciclo_mientrasContext,0)


        def si(self):
            return self.getTypedRuleContext(lenguajeutbParser.SiContext,0)


        def imprimir(self):
            return self.getTypedRuleContext(lenguajeutbParser.ImprimirContext,0)


        def getRuleIndex(self):
            return lenguajeutbParser.RULE_sentencias

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSentencias" ):
                return visitor.visitSentencias(self)
            else:
                return visitor.visitChildren(self)




    def sentencias(self):

        localctx = lenguajeutbParser.SentenciasContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_sentencias)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [lenguajeutbParser.CAMBIAR_VALOR_DE]:
                self.state = 104
                self.asignacion()
                pass
            elif token in [lenguajeutbParser.INICIO_PARA]:
                self.state = 105
                self.ciclo_para()
                pass
            elif token in [lenguajeutbParser.INICIO_MIENTRAS]:
                self.state = 106
                self.ciclo_mientras()
                pass
            elif token in [lenguajeutbParser.INICIO_SI]:
                self.state = 107
                self.si()
                pass
            elif token in [lenguajeutbParser.MOSTRAR_EN_PANTALLA]:
                self.state = 108
                self.imprimir()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AsignacionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CAMBIAR_VALOR_DE(self):
            return self.getToken(lenguajeutbParser.CAMBIAR_VALOR_DE, 0)

        def IDENTIFICADOR(self):
            return self.getToken(lenguajeutbParser.IDENTIFICADOR, 0)

        def POR(self):
            return self.getToken(lenguajeutbParser.POR, 0)

        def expresion(self):
            return self.getTypedRuleContext(lenguajeutbParser.ExpresionContext,0)


        def getRuleIndex(self):
            return lenguajeutbParser.RULE_asignacion

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAsignacion" ):
                return visitor.visitAsignacion(self)
            else:
                return visitor.visitChildren(self)




    def asignacion(self):

        localctx = lenguajeutbParser.AsignacionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_asignacion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.match(lenguajeutbParser.CAMBIAR_VALOR_DE)
            self.state = 112
            self.match(lenguajeutbParser.IDENTIFICADOR)
            self.state = 113
            self.match(lenguajeutbParser.POR)
            self.state = 114
            self.expresion()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Ciclo_paraContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INICIO_PARA(self):
            return self.getToken(lenguajeutbParser.INICIO_PARA, 0)

        def FIN_PARA(self):
            return self.getToken(lenguajeutbParser.FIN_PARA, 0)

        def sentencias(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lenguajeutbParser.SentenciasContext)
            else:
                return self.getTypedRuleContext(lenguajeutbParser.SentenciasContext,i)


        def getRuleIndex(self):
            return lenguajeutbParser.RULE_ciclo_para

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCiclo_para" ):
                return visitor.visitCiclo_para(self)
            else:
                return visitor.visitChildren(self)




    def ciclo_para(self):

        localctx = lenguajeutbParser.Ciclo_paraContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_ciclo_para)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(lenguajeutbParser.INICIO_PARA)
            self.state = 118 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 117
                self.sentencias()
                self.state = 120 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << lenguajeutbParser.MOSTRAR_EN_PANTALLA) | (1 << lenguajeutbParser.INICIO_PARA) | (1 << lenguajeutbParser.INICIO_MIENTRAS) | (1 << lenguajeutbParser.INICIO_SI) | (1 << lenguajeutbParser.CAMBIAR_VALOR_DE))) != 0)):
                    break

            self.state = 122
            self.match(lenguajeutbParser.FIN_PARA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Ciclo_mientrasContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INICIO_MIENTRAS(self):
            return self.getToken(lenguajeutbParser.INICIO_MIENTRAS, 0)

        def FIN_MIENTRAS(self):
            return self.getToken(lenguajeutbParser.FIN_MIENTRAS, 0)

        def sentencias(self, i:int=None):
            if i is None:
